--- a/nftv1.html
+++ b/nftv1.html
@@ -67,9 +67,9 @@
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ART_TOTAL_NUM_SALES_20_21_2021_06_13_172026234_.png?raw=true">
 		</div>
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/NKaf6tHuKF4?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
+			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NKaf6tHuKF4?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
 			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/dRTQoH8HLXQ?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
-			<div class="espace"></div>
+			<div class="espace"> --></div>
 		
 	</div>
 
