--- a/nftv2.html
+++ b/nftv2.html
@@ -66,8 +66,8 @@
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_ETH_USD_VALUE_20_21_2021_06_13_192347102_.png?raw=true">
 		</div>
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/XWRxce0X30Y?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
-			<div class="espace"></div>
+			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XWRxce0X30Y?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
+			<div class="espace"> --></div>
 		
 	</div>
 
