--- a/info.html
+++ b/info.html
@@ -49,11 +49,24 @@
 			<hr class="a">
 			<p>These data sets represent the bases for all final NFTV data scape outputs</p>
 			<hr class="a">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_BTC_CONSUMP_2021_06_02_144743935_.png">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_CONSUMP_2021_06_02_145856692_.png">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_CRYPTO_SEARCH_5_YR_2021_06_02_145634216_.png">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_VALUE_1YR_2021_06_02_150152332_.png">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_GLOBAL_TEMP_2021_06_02_150621690_.png">
+			<p>ALL NFT SALES 2020-2021</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_ALL_NFT.html"></iframe>
+			<p>ART NFT SALES 2020-2021</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_ART_NFT.html"></iframe>
+			<p>ETHEREUM VALUSE USD</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_ETH_VALUE.html"></iframe>
+			<p>BITCOIN VALUSE USD</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_BTC_VALUE.html"></iframe>
+			<p>ETH ENERGY CONSUMPTION</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_ETH_CONSUMP.html"></iframe>
+			<p>BTC ENERGY CONSUMPTION</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_BTC_CONSUMP.html"></iframe>
+			<p>GLOBAL ANNUAL TEMP ANOMOLIES 1880-PRESENT</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_ANNUAL_TEMP.html"></iframe>
+			<p>GLOBAL LAND AND SEA TEMP ANOMOLIES 1901-2000</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_GLOBAL_TEMP.html"></iframe>
+			<p>ALL NFT SALES ALL TIME</p>
+			<iframe class="data" scrolling="no" src="DATA_VIS_NFT_ALLTIME.html"></iframe>
 			<br>
 		<!-- </div> -->
 			<div class="espace"></div>
