--- a/nftv3.html
+++ b/nftv3.html
@@ -60,6 +60,7 @@
 			<hr class="a">
 			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: SAMSUNG / 19XX</p>
 			<hr class="a">
+			<iframe class="data" scrolling="no" src="DATA_VIS3.html"></iframe>
 			<div class="grid-container">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_BTC_ENERGY_CONSUMP_17_21_2021_06_13_195343539_.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_NFTV3_ASYMM_ENERGY_ETH_BTC_2021_06_13_225856044_.png?raw=true">
