--- a/nftv4.html
+++ b/nftv4.html
@@ -60,6 +60,7 @@
 			<hr class="a">
 			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
 			<hr class="a">
+			<iframe class="data" scrolling="no" src="DATA_VIS4.html"></iframe>
 			<div class="grid-container">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_ANOM_1880_2016_2021_06_13_212401213_.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_NFTV4_ASYMM_GLOBAL_LAND_OCEAN_TEMP_2021_06_15_243433775_.png?raw=true">
