--- a/nftv5.html
+++ b/nftv5.html
@@ -60,6 +60,7 @@
 			<hr class="a">
 			<p>TYPE: DIGITAL PHOTO FRAME<br>FACTOR: WORKING / OBSOLETE / AUTOMATIC<br>RATIO: XX:XX<br>COLOR: RGB<br>BRAND: XXXX / 2001</p>
 			<hr class="a">
+			<iframe class="data" scrolling="no" src="DATA_VIS5.html"></iframe>
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/DATA_SCAPE_ALL_NFT_SALES_WEEKLY_2018_NOW_2021_06_13_213625454_.png?raw=true">
 			<div class="espace"></div>
 		
