--- a/DATA_VIS3.html
+++ b/DATA_VIS3.html
@@ -16,24 +16,15 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+
 </head>
 
 <body class="main">
-
-	<div class="contFrame">
-
-	<div class="header">
-		<ul>
-				<li><a href="data_scape.html">PLAY</a></li>
-				<li><a href="info.html">HOME</a></li>
-				<li><a href="">PROCESS</a></li>
-			</ul>
-		</div>
-
-
-	</div>
-
 	
+<div id="jsCont">
+			<script src="NFTV3_DATA_VIS.js"></script>
+		</div>	
 </body>
 	
 
