--- a/nftv1.html
+++ b/nftv1.html
@@ -16,6 +16,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
 </head>
 
 <body class="main">
@@ -61,15 +62,15 @@
 			<hr class="a">
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
 			<hr class="a">
+			<iframe class="data" scrolling="no" src="DATA_VIS1.html"></iframe>
 			<div class="grid-container">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ALL_MONTHLY_NUM_SALES_20_21_2021_06_13_180035178_.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_NFTV1_ASYMM_ALL_NFT_ART_NFT_20_21_2021_06_13_224200582_.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ART_TOTAL_NUM_SALES_20_21_2021_06_13_172026234_.png?raw=true">
 		</div>
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true">
-			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/NKaf6tHuKF4?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/dRTQoH8HLXQ?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
-			<div class="espace"> --></div>
+
+			</div>
 		
 	</div>
 
