--- a/DATA_VIS_ALL_NFT.html
+++ b/DATA_VIS_ALL_NFT.html
@@ -18,6 +18,8 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
 
+	<!-- <script src="http://davidjbradshaw.com/iframe-resizer/js/iframeResizer.contentWindow.min.js"></script> -->
+
 </head>
 
 <body class="main">
