--- a/info.html
+++ b/info.html
@@ -16,6 +16,11 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+
+
+	<!-- <script src="http://davidjbradshaw.com/iframe-resizer/js/iframeResizer.min.js"></script> -->
+
 </head>
 
 <body class="main">
@@ -50,28 +55,32 @@
 			<p>These data sets represent the bases for all final NFTV data scape outputs</p>
 			<hr class="a">
 			<p>ALL NFT SALES 2020-2021</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_ALL_NFT.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ALL_NFT.html"></iframe>
 			<p>ART NFT SALES 2020-2021</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_ART_NFT.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ART_NFT.html"></iframe>
 			<p>ETHEREUM VALUSE USD</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_ETH_VALUE.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ETH_VALUE.html"></iframe>
 			<p>BITCOIN VALUSE USD</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_BTC_VALUE.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_BTC_VALUE.html"></iframe>
 			<p>ETH ENERGY CONSUMPTION</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_ETH_CONSUMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ETH_CONSUMP.html"></iframe>
 			<p>BTC ENERGY CONSUMPTION</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_BTC_CONSUMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_BTC_CONSUMP.html"></iframe>
 			<p>GLOBAL ANNUAL TEMP ANOMOLIES 1880-PRESENT</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_ANNUAL_TEMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ANNUAL_TEMP.html"></iframe>
 			<p>GLOBAL LAND AND SEA TEMP ANOMOLIES 1901-2000</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_GLOBAL_TEMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_GLOBAL_TEMP.html"></iframe>
 			<p>ALL NFT SALES ALL TIME</p>
-			<iframe class="data" scrolling="no" src="DATA_VIS_NFT_ALLTIME.html"></iframe>
+			<iframe class="data2" scrolling="no" loading="lazy" src="DATA_VIS_NFT_ALLTIME.html"></iframe>
 			<br>
 		<!-- </div> -->
 			<div class="espace"></div>
 		</div>
 
+
+		<!-- <script>
+  	iFrameResize({ log: true }, '#myIframe')
+		</script> -->
 
 
 		<div class="mainCont">
@@ -125,6 +134,7 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+
 
 </div>
 
