--- a/nftv1.html
+++ b/nftv1.html
@@ -62,7 +62,7 @@
 			<hr class="a">
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
 			<hr class="a">
-			<iframe class="data" scrolling="no" src="DATA_VIS1.html"></iframe>
+			<iframe class="data" scrolling="no" loading="lazy" src="DATA_VIS1.html"></iframe>
 			<div class="grid-container">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ALL_MONTHLY_NUM_SALES_20_21_2021_06_13_180035178_.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_NFTV1_ASYMM_ALL_NFT_ART_NFT_20_21_2021_06_13_224200582_.png?raw=true">
