--- a/info.html
+++ b/info.html
@@ -55,22 +55,31 @@
 			<p>These data sets represent the bases for all final NFTV data scape outputs</p>
 			<hr class="a">
 			<p>ALL NFT SALES 2020-2021</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(7).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ALL_NFT.html"></iframe>
 			<p>ART NFT SALES 2020-2021</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(8).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ART_NFT.html"></iframe>
 			<p>ETHEREUM VALUSE USD</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(5).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ETH_VALUE.html"></iframe>
 			<p>BITCOIN VALUSE USD</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(6).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_BTC_VALUE.html"></iframe>
 			<p>ETH ENERGY CONSUMPTION</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(3).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ETH_CONSUMP.html"></iframe>
 			<p>BTC ENERGY CONSUMPTION</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(4).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_BTC_CONSUMP.html"></iframe>
 			<p>GLOBAL ANNUAL TEMP ANOMOLIES 1880-PRESENT</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(2).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ANNUAL_TEMP.html"></iframe>
 			<p>GLOBAL LAND AND SEA TEMP ANOMOLIES 1901-2000</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(1).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_GLOBAL_TEMP.html"></iframe>
 			<p>ALL NFT SALES ALL TIME</p>
+			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data.png?raw=true">
 			<iframe class="data2" scrolling="no" loading="lazy" src="DATA_VIS_NFT_ALLTIME.html"></iframe>
 			<br>
 		<!-- </div> -->
