--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</svg>
 
 			<div id="jsCont">
-			<script src="data_scape.js"></script>
+			<script loading="lazy" src="data_scape.js"></script>
 		</div>
 
 		<div class="cntrls">
