--- a/info.html
+++ b/info.html
@@ -97,31 +97,31 @@
 <!-- 			<hr class="a"> -->
 			<a class="imgL" href="nftv1.html">
 				<div class="imgLink">
-				<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/NFTV_BUTTON_1.png"></div></a>
+				<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true"></div></a>
 		
 			<h2>NFTV2</h2>
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftv2.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/NFTV_BUTTON_2.png"></div></a>
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true"></div></a>
 
 			<h2>NFTV3</h2>
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftv3.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/NFTV_BUTTON_3.png"></div></a>
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/NFTV3.png?raw=true"></div></a>
 
 			<h2>NFTV4</h2>
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftv4.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/NFTV_BUTTON_4.png"></div></a>
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true"></div></a>
 
 			<h2>NFTV5</h2>
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftv5.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/NFTV_BUTTON_5.png"></div></a>
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/NFTV5.png?raw=true"></div></a>
 			<div class="espace"></div>
 		</div>
 
