--- a/nftv2.html
+++ b/nftv2.html
@@ -60,13 +60,13 @@
 			<hr class="a">
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
 			<hr class="a">
-			<iframe class="data" scrolling="no" src="DATA_VIS1.html"></iframe>
+			<iframe loading="lazy" class="data" scrolling="no" src="DATA_VIS1.html"></iframe>
 			<div class="grid-container">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_BTC_USD_VALUE_20_21_2021_06_13_191653869_.png?raw=true">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_NFTV2_ASYMM_BTC_ETH_VALUE_2021_06_13_225002977_.png?raw=true">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_ETH_USD_VALUE_20_21_2021_06_13_192347102_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_BTC_USD_VALUE_20_21_2021_06_13_191653869_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_NFTV2_ASYMM_BTC_ETH_VALUE_2021_06_13_225002977_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_ETH_USD_VALUE_20_21_2021_06_13_192347102_.png?raw=true">
 		</div>
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true">
 			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XWRxce0X30Y?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
 			<div class="espace"> -->
 
