--- a/nftv4.html
+++ b/nftv4.html
@@ -60,13 +60,13 @@
 			<hr class="a">
 			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
 			<hr class="a">
-			<iframe class="data" scrolling="no" src="DATA_VIS4.html"></iframe>
+			<iframe loading="lazy" class="data" scrolling="no" src="DATA_VIS4.html"></iframe>
 			<div class="grid-container">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_ANOM_1880_2016_2021_06_13_212401213_.png?raw=true">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_NFTV4_ASYMM_GLOBAL_LAND_OCEAN_TEMP_2021_06_15_243433775_.png?raw=true">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_GLOBAL_LAND_OCEAN_TEMP_ANOM_1901_2000_2021_06_13_210954781_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_ANOM_1880_2016_2021_06_13_212401213_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_NFTV4_ASYMM_GLOBAL_LAND_OCEAN_TEMP_2021_06_15_243433775_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_GLOBAL_LAND_OCEAN_TEMP_ANOM_1901_2000_2021_06_13_210954781_.png?raw=true">
 		</div>
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true">
 			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RNerK3OKjIE?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
 			<div class="espace"> --></div>
 		
