file org update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>NFTVS</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
 			</svg>
 
 			<div id="jsCont">
-			<script loading="lazy" src="data_scape.js"></script>
+			<script loading="lazy" src="js/data_scape.js"></script>
 		</div>
 
 		<div class="cntrls">
