--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>ABOUT_NFTVS</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -56,31 +56,31 @@
 			<hr class="a">
 			<p>ALL NFT SALES 2020-2021</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(7).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ALL_NFT.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ALL_NFT.html"></iframe>
 			<p>ART NFT SALES 2020-2021</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(8).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ART_NFT.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ART_NFT.html"></iframe>
 			<p>ETHEREUM VALUSE USD</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(5).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ETH_VALUE.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ETH_VALUE.html"></iframe>
 			<p>BITCOIN VALUSE USD</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(6).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_BTC_VALUE.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_BTC_VALUE.html"></iframe>
 			<p>ETH ENERGY CONSUMPTION</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(3).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ETH_CONSUMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ETH_CONSUMP.html"></iframe>
 			<p>BTC ENERGY CONSUMPTION</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(4).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_BTC_CONSUMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_BTC_CONSUMP.html"></iframe>
 			<p>GLOBAL ANNUAL TEMP ANOMOLIES 1880-PRESENT</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(2).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_ANNUAL_TEMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ANNUAL_TEMP.html"></iframe>
 			<p>GLOBAL LAND AND SEA TEMP ANOMOLIES 1901-2000</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(1).png?raw=true">
-			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="DATA_VIS_GLOBAL_TEMP.html"></iframe>
+			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_GLOBAL_TEMP.html"></iframe>
 			<p>ALL NFT SALES ALL TIME</p>
 			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data.png?raw=true">
-			<iframe class="data2" scrolling="no" loading="lazy" src="DATA_VIS_NFT_ALLTIME.html"></iframe>
+			<iframe class="data2" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_NFT_ALLTIME.html"></iframe>
 			<br>
 		<!-- </div> -->
 			<div class="espace"></div>
@@ -95,31 +95,31 @@
 		<div class="mainCont">
 			<h2>NFTV1</h2>
 <!-- 			<hr class="a"> -->
-			<a class="imgL" href="nftv1.html">
+			<a class="imgL" href="nftvs/nftv1.html">
 				<div class="imgLink">
 				<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true"></div></a>
 		
 			<h2>NFTV2</h2>
 			<!-- <hr class="a"> -->
-		<a class="imgL" href="nftv2.html">
+		<a class="imgL" href="nftvs/nftv2.html">
 			<div class="imgLink">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true"></div></a>
 
 			<h2>NFTV3</h2>
 			<!-- <hr class="a"> -->
-		<a class="imgL" href="nftv3.html">
+		<a class="imgL" href="nftvs/nftv3.html">
 			<div class="imgLink">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/NFTV3.png?raw=true"></div></a>
 
 			<h2>NFTV4</h2>
 			<!-- <hr class="a"> -->
-		<a class="imgL" href="nftv4.html">
+		<a class="imgL" href="nftvs/nftv4.html">
 			<div class="imgLink">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true"></div></a>
 
 			<h2>NFTV5</h2>
 			<!-- <hr class="a"> -->
-		<a class="imgL" href="nftv5.html">
+		<a class="imgL" href="nftvs/nftv5.html">
 			<div class="imgLink">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/NFTV5.png?raw=true"></div></a>
 			<div class="espace"></div>
