--- a/js_cont/DATA_VIS1.html
+++ b/js_cont/DATA_VIS1.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>TITLE</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="../css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -18,14 +18,12 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
 
-	<!-- <script src="http://davidjbradshaw.com/iframe-resizer/js/iframeResizer.contentWindow.min.js"></script> -->
-
 </head>
 
 <body class="main">
 	
 <div id="jsCont">
-			<script src="NFTV1_DATA_VIS_1.js"></script>
+			<script src="../js/NFTV1_DATA_VIS.js"></script>
 		</div>	
 </body>
 	
