--- a/nftvs/nftv2.html
+++ b/nftvs/nftv2.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>NFTV2</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="../css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -24,9 +24,9 @@
 
 	<div class="header">
 		<ul>
-				<li><a href="index.html">PLAY</a></li>
-				<li><a href="info.html">HOME</a></li>
-				<li><a href="process.html">PROCESS</a></li>
+				<li><a href="../index.html">PLAY</a></li>
+				<li><a href="../info.html">HOME</a></li>
+				<li><a href="../process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -60,7 +60,7 @@
 			<hr class="a">
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
 			<hr class="a">
-			<iframe loading="lazy" class="data" scrolling="no" src="DATA_VIS1.html"></iframe>
+			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS1.html"></iframe>
 			<div class="grid-container">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_BTC_USD_VALUE_20_21_2021_06_13_191653869_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_NFTV2_ASYMM_BTC_ETH_VALUE_2021_06_13_225002977_.png?raw=true">
