--- a/nftvs/nftv5.html
+++ b/nftvs/nftv5.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>NFTV5</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="../css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -24,9 +24,9 @@
 
 	<div class="header">
 		<ul>
-				<li><a href="index.html">PLAY</a></li>
-				<li><a href="info.html">HOME</a></li>
-				<li><a href="process.html">PROCESS</a></li>
+				<li><a href="../index.html">PLAY</a></li>
+				<li><a href="../info.html">HOME</a></li>
+				<li><a href="../process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -60,7 +60,7 @@
 			<hr class="a">
 			<p>TYPE: DIGITAL PHOTO FRAME<br>FACTOR: WORKING / OBSOLETE / AUTOMATIC<br>RATIO: XX:XX<br>COLOR: RGB<br>BRAND: PHILLIPS / 2001</p>
 			<hr class="a">
-			<iframe loading="lazy" class="data" scrolling="no" src="DATA_VIS5.html"></iframe>
+			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS5.html"></iframe>
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/NFTV5.png?raw=true">
 			<div class="espace"></div>
 		
