--- a/js_cont/DATA_VIS_ANNUAL_TEMP.html
+++ b/js_cont/DATA_VIS_ANNUAL_TEMP.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>TITLE</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="../css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 <body class="main">
 	
 <div id="jsCont">
-			<script src="NFTV3_DATA_VIS_2.js"></script>
+			<script src="../js/NFTV4_DATA_VIS_1.js"></script>
 		</div>	
 </body>
 	
