--- a/nftvs/nftv1.html
+++ b/nftvs/nftv1.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>NFTV1</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="../css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -25,9 +25,9 @@
 
 	<div class="header">
 		<ul>
-				<li><a href="d=index.html">PLAY</a></li>
-				<li><a href="info.html">HOME</a></li>
-				<li><a href="process.html">PROCESS</a></li>
+				<li><a href="../index.html">PLAY</a></li>
+				<li><a href="../info.html">HOME</a></li>
+				<li><a href="../process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -62,7 +62,7 @@
 			<hr class="a">
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
 			<hr class="a">
-			<iframe loading="lazy" class="data" scrolling="no" loading="lazy" src="DATA_VIS1.html"></iframe>
+			<iframe loading="lazy" class="data" scrolling="no" loading="lazy" src="../js_cont/DATA_VIS1.html"></iframe>
 			<div class="grid-container">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ALL_MONTHLY_NUM_SALES_20_21_2021_06_13_180035178_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_NFTV1_ASYMM_ALL_NFT_ART_NFT_20_21_2021_06_13_224200582_.png?raw=true">
