--- a/nftvs/nftv4.html
+++ b/nftvs/nftv4.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>NFTV4</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="../css/stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -24,9 +24,9 @@
 
 	<div class="header">
 		<ul>
-				<li><a href="index.html">PLAY</a></li>
-				<li><a href="info.html">HOME</a></li>
-				<li><a href="process.html">PROCESS</a></li>
+				<li><a href="../index.html">PLAY</a></li>
+				<li><a href="../info.html">HOME</a></li>
+				<li><a href="../process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -60,7 +60,7 @@
 			<hr class="a">
 			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
 			<hr class="a">
-			<iframe loading="lazy" class="data" scrolling="no" src="DATA_VIS4.html"></iframe>
+			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS4.html"></iframe>
 			<div class="grid-container">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_ANOM_1880_2016_2021_06_13_212401213_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_NFTV4_ASYMM_GLOBAL_LAND_OCEAN_TEMP_2021_06_15_243433775_.png?raw=true">
