--- a/nftvs/nftv1.html
+++ b/nftvs/nftv1.html
@@ -63,12 +63,17 @@
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS1.html"></iframe>
+			<h2 style="color: rgb(0, 0, 255)">TOTAL NFT SALES 2020 - 2021</h2>
+			<h2 style="color: rgb(0, 255, 0)">TOTAL ART NFT SALES 2020 - 2021</h2>
+			<hr class="a">
+			<h2>BASE MODELS</h2>
+			<hr class="a">
 			<div class="grid-container">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ALL_MONTHLY_NUM_SALES_20_21_2021_06_13_180035178_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_NFTV1_ASYMM_ALL_NFT_ART_NFT_20_21_2021_06_13_224200582_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ART_TOTAL_NUM_SALES_20_21_2021_06_13_172026234_.png?raw=true">
 		</div>
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true">
+			<!-- <img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true"> -->
 
 			</div>
 		
