--- a/nftvs/nftv5.html
+++ b/nftvs/nftv5.html
@@ -61,6 +61,10 @@
 			<p>TYPE: DIGITAL PHOTO FRAME<br>FACTOR: WORKING / OBSOLETE / AUTOMATIC<br>RATIO: XX:XX<br>COLOR: RGB<br>BRAND: PHILLIPS / 2001</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS5.html"></iframe>
+			<h2 style="color: rgb(0, 255, 0)">ALL NFT SALES 2018 - PRESENT</h2>
+			<hr class="a">
+			<h2>BASE MODEL</h2>
+			<hr class="a">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/NFTV5.png?raw=true">
 			<div class="espace"></div>
 		
