--- a/nftvs/nftv2.html
+++ b/nftvs/nftv2.html
@@ -61,12 +61,17 @@
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS1.html"></iframe>
+			<h2 style="color: rgb(0, 0, 255)">ETH VALUE USD 2020 - 2021</h2>
+			<h2 style="color: rgb(0, 255, 0)">BTC VALUE USD 2020 - 2021</h2>
+			<hr class="a">
+			<h2>BASE MODELS</h2>
+			<hr class="a">
 			<div class="grid-container">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_BTC_USD_VALUE_20_21_2021_06_13_191653869_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_NFTV2_ASYMM_BTC_ETH_VALUE_2021_06_13_225002977_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/DATA_SCAPE_ETH_USD_VALUE_20_21_2021_06_13_192347102_.png?raw=true">
 		</div>
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true">
+			<!-- <img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true"> -->
 			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XWRxce0X30Y?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
 			<div class="espace"> -->
 
