--- a/nftvs/nftv4.html
+++ b/nftvs/nftv4.html
@@ -61,12 +61,17 @@
 			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
 			<hr class="a">
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS4.html"></iframe>
+			<h2 style="color: rgb(0, 0, 255)">GLOBAL LAND AND OCEAN TEMPERATURE ANOMOLIES 1901 - 2000</h2>
+			<h2 style="color: rgb(0, 255, 0)">GLOBAL TEMPERATURE ANOMOLIES 1880 - PRESENT</h2>
+			<hr class="a">
+			<h2>BASE MODELS</h2>
+			<hr class="a">
 			<div class="grid-container">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_ANOM_1880_2016_2021_06_13_212401213_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_NFTV4_ASYMM_GLOBAL_LAND_OCEAN_TEMP_2021_06_15_243433775_.png?raw=true">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/DATA_SCAPE_GLOBAL_LAND_OCEAN_TEMP_ANOM_1901_2000_2021_06_13_210954781_.png?raw=true">
 		</div>
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true">
+			<!-- <img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true"> -->
 			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RNerK3OKjIE?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
 			<div class="espace"> --></div>
 		
