--- a/process.html
+++ b/process.html
@@ -111,6 +111,42 @@ The overall goal and object of my research is to explore the NFT space as object
 
 
 		<div class="mainCont">
+			<h2>07.2021</h2>
+		<hr class="a">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JULY/NFTV1_ENV_1_0045.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JULY/NFTV1_SYMM1_1_0062.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JULY/NFTV1_SYMM1_2_0063.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JULY/NFTV1_SYMM1_3_0055.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JULY/NFTV1_SYMM2_1_0052.png?raw=true">
+		<!-- <img loading="lazy" src="">
+		<img loading="lazy" src=""> -->
+
+			<h2>06.2021</h2>
+		<hr class="a">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/NFTV3.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true">
+		<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/NFTV5.png?raw=true">
+		<div class="grid-container2">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ALL_MONTHLY_ACTIVE_WALLETS_20_21_2021_06_13_175741016_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ALL_MONTHLY_NUM_SALES_20_21_2021_06_13_180035178_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ALL_MONTHLY_USD_SALES_20_21_2021_06_13_180413573_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ALL_NFT_SALES_WEEKLY_2018_NOW_2021_06_13_213625454_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_ANOM_1880_2016_2021_06_13_212401213_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ART_ACTIVE_WALLETS_WEEKLY_JAN21_NOW_2021_06_13_163954733_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ART_ALL_ACTIVE_WALLETS_2021_06_13_173614086_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ART_NUM_OF_SALES_NFT_WEEKLY_JAN21_NOW_2021_06_13_164846608_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ART_TOTAL_NUM_SALES_20_21_2021_06_13_172026234_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ART_TOTAL_USD_NFT_WEEKLY_JAN21_NOW_2021_06_13_165726212_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ART_TOTAL_USD_SALES_20_21_2021_06_13_172923114_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_BTC_ENERGY_CONSUMP_17_21_2021_06_13_195343539_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_BTC_USD_VALUE_13_21_2021_06_13_191125614_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_BTC_USD_VALUE_20_21_2021_06_13_191653869_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ETH_ENERGY_CONSUMP_17_21_2021_06_13_195747544_.png?raw=true">
+			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/JUNE/DATA_SCAPE_ETH_USD_VALUE_15_21_2021_06_13_192037832_.png?raw=true">
+		</div>
+
 			<h2>05.2021</h2>
 		<hr class="a">
 		<div class="grid-container2">
