--- a/info.html
+++ b/info.html
@@ -97,7 +97,7 @@
 <!-- 			<hr class="a"> -->
 			<a class="imgL" href="nftvs/nftv1.html">
 				<div class="imgLink">
-				<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true"></div></a>
+				<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/88446fc1775f3873328a827ed822f0f21f17f332/data/outlines/OUTLINE_NFTV-01.svg"></div></a>
 		
 			<h2>NFTV2</h2>
 			<!-- <hr class="a"> -->
