outline image switch

--- a/info.html
+++ b/info.html
@@ -93,35 +93,38 @@
 
 
 		<div class="mainCont">
-			<h2>NFTV1</h2>
+			<!-- <h2>NFTV1</h2> -->
 <!-- 			<hr class="a"> -->
+<div class="espace"></div>
 			<a class="imgL" href="nftvs/nftv1.html">
 				<div class="imgLink">
-				<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/88446fc1775f3873328a827ed822f0f21f17f332/data/outlines/OUTLINE_NFTV-01.svg"></div></a>
+				<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4ab0536ee4fe7eab6c7773e930992b839a37de0f/data/outlines/NFTV_OUTLINES-01.svg"></div></a>
+				<!-- <iframe class="data2" scrolling="no" src="js_cont/DATA_VIS1.html"></iframe> -->
 		
-			<h2>NFTV2</h2>
+			<!-- <h2>NFTV2</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv2.html">
 			<div class="imgLink">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV2/NFTV2.png?raw=true"></div></a>
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4ab0536ee4fe7eab6c7773e930992b839a37de0f/data/outlines/NFTV_OUTLINES-02.svg"></div></a>
 
-			<h2>NFTV3</h2>
+			<!-- <h2>NFTV3</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv3.html">
 			<div class="imgLink">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/NFTV3.png?raw=true"></div></a>
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4ab0536ee4fe7eab6c7773e930992b839a37de0f/data/outlines/NFTV_OUTLINES-04.svg"></div></a>
 
-			<h2>NFTV4</h2>
+			<!-- <h2>NFTV4</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv4.html">
 			<div class="imgLink">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV4/NFTV4.png?raw=true"></div></a>
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4ab0536ee4fe7eab6c7773e930992b839a37de0f/data/outlines/NFTV_OUTLINES-03.svg"></div></a>
 
-			<h2>NFTV5</h2>
+			<!-- <h2>NFTV5</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv5.html">
 			<div class="imgLink">
-			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/NFTV5.png?raw=true"></div></a>
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4ab0536ee4fe7eab6c7773e930992b839a37de0f/data/outlines/NFTV_OUTLINES-05.svg"></div></a>
+			<div class="espace"></div>
 			<div class="espace"></div>
 		</div>
 
