--- a/nftvs/nftv1.html
+++ b/nftvs/nftv1.html
@@ -66,6 +66,7 @@
 			<h2 style="color: rgb(0, 0, 255)">TOTAL NFT SALES 2020 - 2021</h2>
 			<h2 style="color: rgb(0, 255, 0)">TOTAL ART NFT SALES 2020 - 2021</h2>
 			<hr class="a">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/cbd66ebfb64466d8eb2e552202d87a2bfdafc8de/data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-01.svg">
 			<h2>BASE MODELS</h2>
 			<hr class="a">
 			<div class="grid-container">
