--- a/nftvs/nftv3.html
+++ b/nftvs/nftv3.html
@@ -64,6 +64,7 @@
 			<h2 style="color: rgb(0, 0, 255)">BTC ENERGY CONSUMPTION 2016 - 2021</h2>
 			<h2 style="color: rgb(0, 255, 0)">ETH ENERGY CONSUMPTION 2016 - 2021</h2>
 			<hr class="a">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/cbd66ebfb64466d8eb2e552202d87a2bfdafc8de/data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-03.svg">
 			<h2>BASE MODELS</h2>
 			<hr class="a">
 			<div class="grid-container">
