--- a/nftvs/nftv5.html
+++ b/nftvs/nftv5.html
@@ -63,6 +63,7 @@
 			<iframe loading="lazy" class="data" scrolling="no" src="../js_cont/DATA_VIS5.html"></iframe>
 			<h2 style="color: rgb(0, 255, 0)">ALL NFT SALES 2018 - PRESENT</h2>
 			<hr class="a">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/cbd66ebfb64466d8eb2e552202d87a2bfdafc8de/data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-05.svg">
 			<h2>BASE MODEL</h2>
 			<hr class="a">
 			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV5/NFTV5.png?raw=true">
