--- a/process.html
+++ b/process.html
@@ -179,6 +179,10 @@ The overall goal and object of my research is to explore the NFT space as object
 			<h2>03-04.2021</h2>
 		<hr class="a">
 		<div class="grid-container2">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/COLLAGES/OLD/DATA_SCAPE_COLLOGE_1.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/COLLAGES/OLD/DATA_SCAPE_COLLOGE_2.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/COLLAGES/OLD/DATA_SCAPE_COLLOGE_3.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/COLLAGES/OLD/DATA_SCAPE_COLLOGE_4.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/7/DATA_SCAPE_3D_2021_05_02_214543201_.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/7/DATA_SCAPE_3D_2021_05_02_214737939_.png?raw=true">
 			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/6/DATA_SCAPE_3D_2021_05_02_181603226_.png?raw=true">
