image upload for index

--- a/process.html
+++ b/process.html
@@ -105,6 +105,9 @@ The overall goal and object of my research is to explore the NFT space as object
 			<div class="subCont"> -->
 				<h2>WRITING / FINAL THOUGHTS</h2>
 				<hr class="a">
+				<p>Abstract:
+				<br><br>
+			In regard to the recent rise in popularity of NFT (non-fungible token) based digital art markets, there is much to be said. There is, in fact, too much to be said. Among a vast sea of pros and cons, I can only offer my criticism and focus on a selection of issues. For the purposes of my research, I explore two main points: The displaced environmental impact of the excessive use of energy by cryptocurrency systems, and the potentially toxic and confusing environment that is created for artists in the digital sphere and digital medium. These issues are majorly unseen or unfelt by the general audience engaging in these spaces, and raise questions of rarity, object value, and the aesthetics of the digital medium. What does it mean to be a digital artist? What have we gained from these spaces? What have we lost? What have we given? What have we taken? What then, is the role of the designer in identifying and visualizing these issues? The factors of emotion and data come in to play, two concepts otherwise found at contrast. How can the abstraction of data, (data relevant to the topic at hand), be used to evoke and activate the empathy and attention of the onlooker? This practice of abstracting data as a method for design is one that requires great attention to the context of the data, the emotional value of the data, the environment for the data, and the tools used to manipulate the data. Although the specificity of my topic is core to my experiments, hereby known as Data Scapes and NFTVS, my goal is to extend these practices with data abstraction further into the methods of information visualization and design.</p>
 			<!-- </div> -->
 			<div class="espace"></div>
 		</div>
