--- a/info.html
+++ b/info.html
@@ -55,31 +55,31 @@
 			<p>These data sets represent the bases for all final NFTV data scape outputs</p>
 			<hr class="a">
 			<p>ALL NFT SALES 2020-2021</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(7).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(7).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ALL_NFT.html"></iframe>
 			<p>ART NFT SALES 2020-2021</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(8).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(8).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ART_NFT.html"></iframe>
 			<p>ETHEREUM VALUSE USD</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(5).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(5).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ETH_VALUE.html"></iframe>
 			<p>BITCOIN VALUSE USD</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(6).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(6).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_BTC_VALUE.html"></iframe>
 			<p>ETH ENERGY CONSUMPTION</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(3).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(3).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ETH_CONSUMP.html"></iframe>
 			<p>BTC ENERGY CONSUMPTION</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(4).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(4).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_BTC_CONSUMP.html"></iframe>
 			<p>GLOBAL ANNUAL TEMP ANOMOLIES 1880-PRESENT</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(2).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(2).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_ANNUAL_TEMP.html"></iframe>
 			<p>GLOBAL LAND AND SEA TEMP ANOMOLIES 1901-2000</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data%20(1).png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data%20(1).png?raw=true">
 			<iframe class="data2" id="myIframe" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_GLOBAL_TEMP.html"></iframe>
 			<p>ALL NFT SALES ALL TIME</p>
-			<img class="mob" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/GRAPHS_4_MOBILE/data.png?raw=true">
+			<img class="mob" src="data/GRAPHS_4_MOBILE/data.png?raw=true">
 			<iframe class="data2" scrolling="no" loading="lazy" src="js_cont/DATA_VIS_NFT_ALLTIME.html"></iframe>
 			<br>
 		<!-- </div> -->
@@ -98,32 +98,32 @@
 <div class="espace"></div>
 			<a class="imgL" href="nftvs/nftv1.html">
 				<div class="imgLink">
-				<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4f396b2664c2d7aa9afd0c374e88fa78fdbd263b/data/outlines/NFTV_OUTLINES-01.svg"></div></a>
+				<img src="data/outlines/NFTV_OUTLINES-01.svg"></div></a>
 				<!-- <iframe class="data2" scrolling="no" src="js_cont/DATA_VIS1.html"></iframe> -->
 		
 			<!-- <h2>NFTV2</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv2.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4f396b2664c2d7aa9afd0c374e88fa78fdbd263b/data/outlines/NFTV_OUTLINES-02.svg"></div></a>
+			<img src="data/outlines/NFTV_OUTLINES-02.svg"></div></a>
 
 			<!-- <h2>NFTV3</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv3.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/8ef7d9ab9e21c7f803b2f504b87099dff5179287/data/outlines/NFTV_OUTLINES-03.svg"></div></a>
+			<img src="data/outlines/NFTV_OUTLINES-03.svg"></div></a>
 
 			<!-- <h2>NFTV4</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv4.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/8ef7d9ab9e21c7f803b2f504b87099dff5179287/data/outlines/NFTV_OUTLINES-04.svg"></div></a>
+			<img src="data/outlines/NFTV_OUTLINES-04.svg"></div></a>
 
 			<!-- <h2>NFTV5</h2> -->
 			<!-- <hr class="a"> -->
 		<a class="imgL" href="nftvs/nftv5.html">
 			<div class="imgLink">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/4f396b2664c2d7aa9afd0c374e88fa78fdbd263b/data/outlines/NFTV_OUTLINES-05.svg"></div></a>
+			<img src="data/outlines/NFTV_OUTLINES-05.svg"></div></a>
 			<div class="espace"></div>
 			<div class="espace"></div>
 		</div>
