--- a/nftvs/nftv3.html
+++ b/nftvs/nftv3.html
@@ -64,13 +64,13 @@
 			<h2 style="color: rgb(0, 0, 255)">BTC ENERGY CONSUMPTION 2016 - 2021</h2>
 			<h2 style="color: rgb(0, 255, 0)">ETH ENERGY CONSUMPTION 2016 - 2021</h2>
 			<hr class="a">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/cbd66ebfb64466d8eb2e552202d87a2bfdafc8de/data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-03.svg">
+			<img src="../data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-03.svg">
 			<h2>BASE MODELS</h2>
 			<hr class="a">
 			<div class="grid-container">
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_BTC_ENERGY_CONSUMP_17_21_2021_06_13_195343539_.png?raw=true">
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_NFTV3_ASYMM_ENERGY_ETH_BTC_2021_06_13_225856044_.png?raw=true">
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_ETH_ENERGY_CONSUMP_17_21_2021_06_13_195747544_.png?raw=true">
+			<img loading="lazy" src="../data/NFTV3/DATA_SCAPE_BTC_ENERGY_CONSUMP_17_21_2021_06_13_195343539_.png?raw=true">
+			<img loading="lazy" src="../data/NFTV3/DATA_SCAPE_NFTV3_ASYMM_ENERGY_ETH_BTC_2021_06_13_225856044_.png?raw=true">
+			<img loading="lazy" src="../data/NFTV3/DATA_SCAPE_ETH_ENERGY_CONSUMP_17_21_2021_06_13_195747544_.png?raw=true">
 		</div>
 			<!-- <img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/NFTV3.png?raw=true"> -->
 			<!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nb0MRAko6Fc?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
