--- a/nftvs/nftv1.html
+++ b/nftvs/nftv1.html
@@ -66,13 +66,13 @@
 			<h2 style="color: rgb(0, 0, 255)">TOTAL NFT SALES 2020 - 2021</h2>
 			<h2 style="color: rgb(0, 255, 0)">TOTAL ART NFT SALES 2020 - 2021</h2>
 			<hr class="a">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/cbd66ebfb64466d8eb2e552202d87a2bfdafc8de/data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-01.svg">
+			<img src="../data/outlines/NO_TXT_SVG/NFTV_OUTLINES_NO_TXT-01.svg">
 			<h2>BASE MODELS</h2>
 			<hr class="a">
 			<div class="grid-container">
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ALL_MONTHLY_NUM_SALES_20_21_2021_06_13_180035178_.png?raw=true">
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_NFTV1_ASYMM_ALL_NFT_ART_NFT_20_21_2021_06_13_224200582_.png?raw=true">
-			<img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/DATA_SCAPE_ART_TOTAL_NUM_SALES_20_21_2021_06_13_172026234_.png?raw=true">
+			<img loading="lazy" src="../data/NFTV1/DATA_SCAPE_ALL_MONTHLY_NUM_SALES_20_21_2021_06_13_180035178_.png?raw=true">
+			<img loading="lazy" src="../data/NFTV1/DATA_SCAPE_NFTV1_ASYMM_ALL_NFT_ART_NFT_20_21_2021_06_13_224200582_.png?raw=true">
+			<img loading="lazy" src="../data/NFTV1/DATA_SCAPE_ART_TOTAL_NUM_SALES_20_21_2021_06_13_172026234_.png?raw=true">
 		</div>
 			<!-- <img loading="lazy" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV1/NFTV1.png?raw=true"> -->
 
